tests/fixtures/errors/invalid_malformed_note_ref.puml
@startuml
participant A
participant B
note of A: bad
ref over A, B
end ref
@enduml
